--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
+}
+
+input[type="file"] {
+  font-size: 0;
 }
 
 .bookmark__tooltip {
-  display:none
+  display: none;
 }
 
 .bookmark__button:hover .bookmark__tooltip {
@@ -13,8 +17,6 @@
   position: absolute;
   z-index: 100;
 }
-
-
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -36,12 +38,6 @@
 .App-link {
   color: #61dafb;
 }
-
-/* #target {
-  overflow-y: scroll;
-  height: 100vh;
-
-} */
 
 @keyframes App-logo-spin {
   from {
